--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,11 @@
     "builds": [
       { "src": "server.js", "use": "@vercel/node" }
     ],
-    "routes": [
-      { "src": "/(.*)", "dest": "server.js" }
+    "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    }
     ],
     
       "headers": [
