added memory size

--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,16 @@
             }
           ]
         }
-      ]
+      ],
+      
+        "functions": {
+          "server.js": {
+            "memory": 1024,
+            "maxDuration": 10
+          }
+        }
+      
+      
     }
     
   
